ADD_SUBDIRECTORY(commondlg)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(kernel)
ADD_SUBDIRECTORY(render)
ADD_SUBDIRECTORY(script)
ADD_SUBDIRECTORY(gfxdriver)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(ttfont)
ADD_SUBDIRECTORY(vfs)
ADD_SUBDIRECTORY(dbghlp)
ADD_SUBDIRECTORY(audio)
ADD_SUBDIRECTORY(archive)
ADD_SUBDIRECTORY(devicedb)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(net)
ADD_SUBDIRECTORY(atom3dx)
ADD_SUBDIRECTORY(zlib)
ADD_SUBDIRECTORY(lzmapkg)
