IF (BUILD_WIN64)
ELSE (BUILD_WIN64)
	#ADD_SUBDIRECTORY(ATOM_maxexporter)
	#ADD_SUBDIRECTORY(ATOM_mayaexporter)
	#ADD_SUBDIRECTORY(ATOM_EarthSculptorPlugin)
	#ADD_SUBDIRECTORY(maxexptool)
ENDIF (BUILD_WIN64)

ADD_SUBDIRECTORY(ATOM_studio)
#ADD_SUBDIRECTORY(ATOM_runscript)
#ADD_SUBDIRECTORY(ATOM_chgskeleton)
#ADD_SUBDIRECTORY(uimgref)
#ADD_SUBDIRECTORY(shadercompiler)
