INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include/ESSDK")
LINK_DIRECTORIES("${THIRDPART_DIR}/lib")
LINK_DIRECTORIES("${THIRDPART_DIR}/lib/dxsdk/x86")

AUX_SOURCE_DIRECTORY(. ESPluginSrc)
FILE(GLOB ESPluginHeaders *.h)

ADD_DEFINITIONS(-DES_PLUGIN_EXPORTS)
ADD_LIBRARY(ATOM_esplugin SHARED ${ESPluginSrc} ${ESPluginHeaders})
ADD_DEPENDENCIES(ATOM_esplugin ATOM_kernel ATOM_dbghlp ATOM_image ATOM_vfs)
TARGET_LINK_LIBRARIES(ATOM_esplugin ATOM_kernel ATOM_dbghlp ATOM_image ATOM_vfs EarthSculptor)

INSTALL_TARGET(ATOM_esplugin)
