INCLUDE_DIRECTORIES("${ATOM_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include")
INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include/tinyxml")

AUX_SOURCE_DIRECTORY(. DCGenSrc)
FILE(GLOB DCGenPrivateHeaders *.h)
SOURCE_GROUP(headers FILES ${DCGenPrivateHeaders})
SOURCE_GROUP(source FILES ${DCGenSrc})

ADD_EXECUTABLE(ATOM_dcgen ${DCGenSrc} ${DCGenPrivateHeaders})
ADD_DEPENDENCIES(ATOM_dcgen ATOM_dbghlp ATOM_kernel ATOM_geometry ATOM_engine ATOM_image)
TARGET_LINK_LIBRARIES(ATOM_dcgen ATOM_dbghlp ATOM_kernel ATOM_geometry ATOM_engine ATOM_image)
SET_TARGET_PROPERTIES(ATOM_dcgen PROPERTIES LINK_FLAGS "/MAP")

INSTALL(TARGETS ATOM_dcgen RUNTIME DESTINATION ${DEPLOY_DIR})
