INCLUDE_DIRECTORIES("${ATOM_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include")
INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include/tinyxml")

AUX_SOURCE_DIRECTORY(. DupRemoveSrc)
FILE(GLOB DupRemovePrivateHeaders *.h)
SOURCE_GROUP(headers FILES ${DupRemovePrivateHeaders})
SOURCE_GROUP(source FILES ${DupRemoveSrc})

ADD_EXECUTABLE(ATOM_dupremove ${DupRemoveSrc} ${DupRemovePrivateHeaders})
ADD_DEPENDENCIES(ATOM_dupremove ATOM_kernel)
TARGET_LINK_LIBRARIES(ATOM_dupremove ATOM_kernel)
SET_TARGET_PROPERTIES(ATOM_dupremove PROPERTIES LINK_FLAGS "/MAP")

INSTALL(TARGETS ATOM_dupremove RUNTIME DESTINATION ${DEPLOY_DIR})
