INCLUDE_DIRECTORIES("${ATOM_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include")
INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include/tinyxml")

AUX_SOURCE_DIRECTORY(. FindBoneSrc)
FILE(GLOB FindBonePrivateHeaders *.h)

ADD_EXECUTABLE(ATOM_findbone ${FindBoneSrc} ${FindBonePrivateHeaders})
ADD_DEPENDENCIES(ATOM_findbone ATOM_dbghlp ATOM_kernel ATOM_engine)
TARGET_LINK_LIBRARIES(ATOM_findbone ATOM_dbghlp ATOM_kernel ATOM_engine)
SET_TARGET_PROPERTIES(ATOM_findbone PROPERTIES LINK_FLAGS "/MAP")

INSTALL(TARGETS ATOM_findbone RUNTIME DESTINATION ${DEPLOY_DIR})
