INCLUDE_DIRECTORIES("${ATOM_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include")
INCLUDE_DIRECTORIES("${THIRDPART_DIR}/include/tinyxml")

AUX_SOURCE_DIRECTORY(. FWConvSrc)
FILE(GLOB FWConvPrivateHeaders *.h)
SOURCE_GROUP(headers FILES ${FWConvPrivateHeaders})
SOURCE_GROUP(source FILES ${FWConvSrc})

ADD_EXECUTABLE(ATOM_fwconv ${FWConvSrc} ${FWConvPrivateHeaders})
ADD_DEPENDENCIES(ATOM_fwconv ATOM_dbghlp ATOM_kernel ATOM_geometry ATOM_engine ATOM_image)
TARGET_LINK_LIBRARIES(ATOM_fwconv ATOM_dbghlp ATOM_kernel ATOM_geometry ATOM_engine ATOM_image)
SET_TARGET_PROPERTIES(ATOM_fwconv PROPERTIES LINK_FLAGS "/MAP")

INSTALL(TARGETS ATOM_fwconv RUNTIME DESTINATION ${DEPLOY_DIR})
